hangul/hangul.h

typedef uint32_t ucschar;
/* hangulinputcontext.c */
typedef struct _HangulKeyboard        HangulKeyboard;
typedef struct _HangulCombination     HangulCombination;
typedef struct _HangulInputContext    HangulInputContext;
/* hanja.c */
typedef struct _Hanja Hanja;
typedef struct _HanjaList HanjaList;
typedef struct _HanjaTable HanjaTable;
HanjaList*   hanja_table_match_prefix(const HanjaTable* table, const char *key);
HanjaList*   hanja_table_match_suffix(const HanjaTable* table, const char *key);
void         hanja_table_delete(HanjaTable *table);
int          hanja_list_get_size(const HanjaList *list);
const char*  hanja_list_get_key(const HanjaList *list);
const Hanja* hanja_list_get_nth(const HanjaList *list, unsigned int n);
const char*  hanja_list_get_nth_key(const HanjaList *list, unsigned int n);
const char*  hanja_list_get_nth_value(const HanjaList *list, unsigned int n);
const char*  hanja_list_get_nth_comment(const HanjaList *list, unsigned int n);
void         hanja_list_delete(HanjaList *list);
const char*  hanja_get_key(const Hanja* hanja);
const char*  hanja_get_value(const Hanja* hanja);
const char*  hanja_get_comment(const Hanja* hanja);
void    hangul_keyboard_set_value(HangulKeyboard *keyboard,
	int key, ucschar value) LIBHANGUL_DEPRECATED;
void hangul_ic_set_combination(HangulInputContext *hic,
	const HangulCombination *combination) LIBHANGUL_DEPRECATED;
unsigned    hangul_ic_get_n_keyboards() /* LIBHANGUL_DEPRECATED */;
const char* hangul_ic_get_keyboard_id(unsigned index_) /* LIBHANGUL_DEPRECATED */;
const char* hangul_ic_get_keyboard_name(unsigned index_) /* LIBHANGUL_DEPRECATED */;