bindings/rust/src/hangul.rs

unsafe extern "C" {
    pub fn hanja_table_match_prefix(
        table: *const HanjaTable,
        key: *const ::std::os::raw::c_char,
    ) -> *mut HanjaList;
}
unsafe extern "C" {
    pub fn hanja_table_match_suffix(
        table: *const HanjaTable,
        key: *const ::std::os::raw::c_char,
    ) -> *mut HanjaList;
}
unsafe extern "C" {
    pub fn hanja_table_delete(table: *mut HanjaTable);
}
unsafe extern "C" {
    pub fn hanja_list_get_size(list: *const HanjaList) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn hanja_list_get_key(list: *const HanjaList) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hanja_list_get_nth(list: *const HanjaList, n: ::std::os::raw::c_uint) -> *const Hanja;
}
unsafe extern "C" {
    pub fn hanja_list_get_nth_key(
        list: *const HanjaList,
        n: ::std::os::raw::c_uint,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hanja_list_get_nth_value(
        list: *const HanjaList,
        n: ::std::os::raw::c_uint,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hanja_list_get_nth_comment(
        list: *const HanjaList,
        n: ::std::os::raw::c_uint,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hanja_list_delete(list: *mut HanjaList);
}
unsafe extern "C" {
    pub fn hanja_get_key(hanja: *const Hanja) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hanja_get_value(hanja: *const Hanja) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hanja_get_comment(hanja: *const Hanja) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hangul_keyboard_set_value(
        keyboard: *mut HangulKeyboard,
        key: ::std::os::raw::c_int,
        value: ucschar,
    );
}
unsafe extern "C" {
    pub fn hangul_ic_set_combination(
        hic: *mut HangulInputContext,
        combination: *const HangulCombination,
    );
}
unsafe extern "C" {
    pub fn hangul_ic_get_n_keyboards() -> ::std::os::raw::c_uint;
}
unsafe extern "C" {
    pub fn hangul_ic_get_keyboard_id(
        index_: ::std::os::raw::c_uint,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hangul_ic_get_keyboard_name(
        index_: ::std::os::raw::c_uint,
    ) -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_data {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_multibyte_data {
    pub _address: u8,
}
